<resources>
    <string name="txt_loading">%s\nThis action may contain Ads!</string>
    <string name="loading">Loading...</string>
    <string name="ad_attribution" translatable="false">Ad</string>
    <string name="ad_attribution2" translatable="false">Ad</string>
    <string name="txt_show_ad">This action may contain Ads!</string>
    <string name="hint_txt_feedback">Add your text here...</string>
    <string name="app_name2" translatable="false">Application</string>
    <string name="txt_1_star">Oh, no!\nPlease leave us some feedback</string>
    <string name="txt_2_star">Oh, no!\nPlease leave us some feedback</string>
    <string name="txt_3_star">Oh, no!\nPlease leave us some feedback</string>
    <string name="txt_4_star">We like you too!\nThanks for your feedback</string>
    <string name="txt_5_star">We like you too!\nThanks for your feedback</string>
    <string name="cta_1star">FEEDBACK</string>
    <string name="cta_2star">FEEDBACK</string>
    <string name="cta_3star">FEEDBACK</string>
    <string name="cta_4star">Rate</string>
    <string name="sponsor_mes">Sponsor Message</string>
    <string name="loading_wait">Loading. Please wait...</string>
    <string name="cta_5star">Rate 5 stars on Google Play</string>
    <string name="me_title_rate_app">How was everything?</string>
    <string name="me_body_rate_app">We work super hard to serve you better and would love to know would you rate our app?</string>
    <string name="no_thank"><u>No, thanks</u></string>
    <string name="rate_now">Rate now</string>
    <string name="hint_my_txt_feedback">Leave with your feedback...</string>
    <string name="exiting_app">Exiting app...</string>
    <string name="may_ads">Loading...\n(This action may contains Ads)\nRemove ads if you find it annoying!</string>
    <string name="language">Language</string>
    <string name="anything_that_can_be_improved">Anything that can be improved?</string>
    <string name="your_feedback_optional">Your feedback (Optional)</string>
    <string name="feedback">Feedback</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="all_is_free_for_you">All is free for you!</string>
    <string name="app_is_supported_by_ads_nbut_you_can_remove_all_annoying_ads">App is supported by Ads\nbut you can remove all annoying Ads.</string>
    <string name="upgrade_now">Upgrade Now</string>
    <string name="remove_all_ads_forever">Remove All Ads Forever</string>
    <string name="restarting_app">Restarting App...</string>
    <string name="are_you_sure_nto_exit_the_application">Are you sure\nto exit the Application?</string>
    <string name="wait_a_moment_n_this_action_may_contain_ads">Wait a moment!\n(This action may contain ads)</string>
    <string name="how_was_your_nexperience_with_us">How was your\nexperience with us?</string>
    <string name="thanks_for_making_nall_this_better">Thanks for making\nall this better!</string>
    <string name="good">Good</string>
    <string name="submit">Submit</string>
    <string name="skip_ad">Skip Ad</string>
    <string name="we_working_hard_for_a_better_user_experience_we_d_greatly_appreciate_if_you_can_rate_us">We working hard for a better user experience.We’d greatly appreciate if you can rate us.</string>
    <string name="don_t_have_the_functions_i_need_n_please_feedback_to_your_desired_details">Don’t have the functions i need\n(Please feedback to your desired details)</string>
    <string name="i_cannot_purchase_the_premium_version_nbecause_i_cannot_pay">I cannot purchase the premium version\nbecause I cannot pay</string>
    <string name="i_want_to_pay_for_each_feature_separately">I want to pay for each feature separately</string>
    <string name="the_design_is_too_small_for_me_to_see">The design is too small for me to see</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="this_action_may_contains_ads_n_remove_ads_if_you_find_it_annoying">This action may contains Ads.\n Remove ads if you find it annoying!</string>
    <string name="see_you_later">See you later!</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="skip">Skip</string>
    <string name="don_t_ask_me_again">Dont ask me again</string>
    <string name="set">Change</string>
    <string name="activate">Activate</string>
    <string name="fetch">fetch</string>
    <string name="action">Action</string>
    <string name="open">Open</string>
    <string name="open_this_app_on_google_play_store_are_you_sure_you_want_to_take_this_action">Open this app on Google Play Store.\nAre you sure you want to take this action?</string>
    <string name="our_top_apps">Our Top Apps</string>
    <string name="oops_check_your_internet_connection_and_try_again">Oops...\n\nCheck your internet connection and try again!</string>
    <string name="reset">Reset</string>
    <string name="check">Check App on Google Play?</string>
    <string name="enter_language_name">Enter language name</string>
    <string name="language_setup">Language Setup</string>
    <string name="Apply">Apply</string>
    <string name="taymay_io_coupons">Taymay.io - Coupons</string>
    <string name="use_the_code_to_upgrade_to_the_premium_version">Use the code to upgrade to the Premium version.</string>
    <string name="enter_your_coupon_code">Enter your Coupon Code...</string>
    <string name="app_name">App</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="start">Start</string>
    <string name="continue_apps">Continues to run.</string>
</resources>
