<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_key"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_fetch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fetch" />

        <Button
            android:id="@+id/btn_Activate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activate" />

        <Button
            android:id="@+id/btn_fetch_and_activte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="fetchAndActivate" />


        <Button
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset" />

        <TextView
            android:id="@+id/tv_value"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</layout>