<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_feedback"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_cancel_feed"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="right"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/ic_close_feedback"
        android:text="" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/banner_feedback" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/anything_that_can_be_improved"
            android:textColor="#000"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/txt_feedback"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_et_submit"
            android:gravity="top"
            android:hint="@string/your_feedback_optional"
            android:inputType="text|textMultiLine"
            android:lines="4"
            android:padding="@dimen/_5sdp"
            android:textColorHint="#919191" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_feed_back_w"
            android:drawablePadding="@dimen/_10sdp"

            android:text="@string/feedback"
            android:textColor="@color/color_bg_main"
            android:textStyle="bold"
            android:visibility="invisible" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextAppearance.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/ic_cancel_feed"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingRight="@dimen/_10sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/color_bg_main"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_submit_feed"
            style="@style/TextAppearance.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_submit_feed"
            android:paddingLeft="@dimen/_30sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingRight="@dimen/_30sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/color_bg_main" />
    </LinearLayout>
</LinearLayout>