<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingDefaultResource">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/view_rate_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitleFeedback"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:padding="@dimen/_3sdp"
                    android:text="@string/taymay_io_coupons" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:padding="@dimen/_3sdp"
                    android:text="@string/use_the_code_to_upgrade_to_the_premium_version" />


                <EditText
                    android:id="@+id/txt_code"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/bg_my_edt_feedback"
                    android:gravity="top|left"
                    android:hint="@string/enter_your_coupon_code"
                    android:lines="2"
                    android:padding="@dimen/_8sdp" />

                <ProgressBar
                    android:id="@+id/prg_loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_8sdp" />

                <LinearLayout
                    android:id="@+id/ll_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_cancel"
                        style="@style/TextAppearance.AppCompat.Button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/_8sdp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_cancel"
                        android:gravity="center"
                        android:padding="@dimen/_8sdp"
                        android:text="@string/cancel"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhile" />

                    <TextView
                        android:id="@+id/tv_apply"
                        style="@style/TextAppearance.AppCompat.Button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_my_btn_submit_feedback"
                        android:gravity="center"
                        android:padding="@dimen/_8sdp"
                        android:text="@string/Apply"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhile" />
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</layout>