<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_confirm_go_to_play"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp">

    <com.appbroker.roundedimageview.RoundedImageView
        android:id="@+id/imv_icon"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_16sdp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_weight="1"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:textColor="#000"
        tools:text="Crown Heart - Photo Editor" />


    <TextView
        android:id="@+id/tv_short"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="center"
        android:text="@string/open_this_app_on_google_play_store_are_you_sure_you_want_to_take_this_action"
        android:textColor="#000" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_8sdp"
            android:background="@drawable/bg_btn_cancel_go"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/cancel"
            android:textColor="#595959" />


        <TextView
            android:id="@+id/tv_open"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:background="@drawable/bg_btn_go"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"

            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/open"
            android:textColor="#FFFFFF" />


    </LinearLayout>

</LinearLayout>