<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/ll_dialog_remove_ad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/may_ads"
                    android:visibility="invisible" />


                <ProgressBar
                    style="@android:style/Widget.ProgressBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/_8sdp"
                    android:visibility="invisible" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ic_close"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="right"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:scaleType="center"
                    android:src="@drawable/ic_close_feedback"
                    android:textColor="#000" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:src="@drawable/logo_dialog_premium"
                android:text="@string/loading"
                android:textColor="#000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="vertical"
                android:padding="@dimen/_4sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/ic_tick_dialog_premium"
                    android:drawablePadding="@dimen/_10sdp"
                    android:gravity="center"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/remove_ads"
                    android:textColor="#000" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/all_is_free_for_you"
                    android:textColor="#E91E63"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:padding="@dimen/_4sdp"
                    android:text="@string/app_is_supported_by_ads_nbut_you_can_remove_all_annoying_ads"
                    android:textColor="#0099ff" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_cost_premium"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="@dimen/_8sdp"
                    android:text="Only 10.000 VND / Lifetime"
                    android:textColor="#FF9800" />
            </LinearLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_pay"
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button_rate"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingLeft="@dimen/_60sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingRight="@dimen/_60sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/upgrade_now"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/_25sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog_rate"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp"
            android:visibility="gone">

            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/spin_kit"
                style="@style/SpinKitView.DoubleBounce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/_5sdp"
                app:SpinKit_Color="@color/colorPrimary" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_loading2"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@string/loading"
                android:textColor="#000" />
        </LinearLayout>


    </LinearLayout>
</layout>

