<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data></data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imv_logo"
                        android:layout_width="@dimen/_90sdp"
                        android:layout_height="@dimen/_90sdp"
                        android:src="@mipmap/ic_launcher" />

                    <LinearLayout
                        android:id="@+id/layout_ads"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center|top"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextAppearance.AppCompat.Large"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:gravity="center"
                            android:text="@string/are_you_sure_nto_exit_the_application" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/btn_yes_exit"
                                style="@style/TextAppearance.AppCompat.Medium"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="@dimen/_20sdp"
                                android:background="@drawable/bg_btn_exit_yes"
                                android:paddingLeft="@dimen/_40sdp"
                                android:paddingTop="@dimen/_10sdp"
                                android:paddingRight="@dimen/_40sdp"
                                android:paddingBottom="@dimen/_10sdp"
                                android:text="@string/yes"
                                android:textAllCaps="false"
                                android:textColor="#fff" />
                            <TextView
                                android:id="@+id/btn_no_exit"
                                style="@style/TextAppearance.AppCompat.Medium"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/_20sdp"
                                android:background="@drawable/bg_btn_exit_no"
                                android:paddingLeft="@dimen/_40sdp"
                                android:paddingTop="@dimen/_10sdp"
                                android:paddingRight="@dimen/_40sdp"
                                android:paddingBottom="@dimen/_10sdp"
                                android:text="@string/no"
                                android:textAllCaps="false"
                                android:textColor="#fff" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/adx_native_exit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_marginTop="@dimen/_40sdp"

                            android:orientation="vertical"></LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_exit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ProgressBar
                            style="@android:style/Widget.ProgressBar.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:gravity="center"
                            android:indeterminate="false" />


                        <TextView
                            style="@style/TextAppearance.AppCompat.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:gravity="center"
                            android:text="@string/exiting_app" />


                        <TextView
                            android:id="@+id/tv_goodbye"
                            style="@style/TextAppearance.AppCompat.Medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:gravity="center"
                            android:text="@string/see_you_later" />
                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>